Build call to action section with book now button displaying alternate text on hover. Include pulsate animation used previously on inline buttons, add fix for animation in Firefox to prevent blurriness caused by adding perspective property needed to prevent jerky animation in Chrome - Firefox only animation keyframes contained in a -moz- prefixed @supports definition.

--- a/css/style.css
+++ b/css/style.css
@@ -242,11 +242,23 @@ body {
     transform: scale(1);
     box-shadow: none; }
   50% {
-    transform: scale(1.1);
+    transform: perspective(1px) scale(1.05);
     box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
   100% {
     transform: scale(1);
     box-shadow: none; } }
+
+@supports (-moz-appearance: none) {
+  @keyframes pulsate {
+    0% {
+      transform: scale(1);
+      box-shadow: none; }
+    50% {
+      transform: scale(1.05);
+      box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+    100% {
+      transform: scale(1);
+      box-shadow: none; } } }
 
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem; }
@@ -340,6 +352,48 @@ body {
     line-height: 1;
     color: var(--color-grey-light-2);
     z-index: 10; }
+
+.cta {
+  padding: 3.5rem;
+  text-align: center; }
+  .cta__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem; }
+
+.btn {
+  font-size: 1.6rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 10rem;
+  border: none;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  backface-visibility: hidden;
+  cursor: pointer; }
+  .btn > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .3s; }
+  .btn__visible {
+    padding: 2rem 7.5rem; }
+  .btn__invisible {
+    padding: 2rem 0;
+    position: absolute;
+    top: -100%;
+    left: 0; }
+  .btn:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+    .btn:hover .btn__visible,
+    .btn:hover .btn__invisible {
+      transform: translateY(100%); }
+  .btn:focus {
+    outline: none;
+    animation: pulsate 1s infinite; }
 
 .container {
   max-width: 120rem;
