--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -291,7 +291,7 @@
 	background-color: transparent;
 	cursor: pointer;
 	transition: all .2s;
-	backface-visibility: hidden;
+	backface-visibility: hidden; // Fix for blurred text on focus animation in Firefox
 
 	& span {
 		margin-left: .3rem;
@@ -319,13 +319,34 @@
 	}
 
 	50% {
-		transform: scale(1.1);
+		transform: perspective(1px) scale(1.05); // persepective fix for jerky animation in Chrome
 		box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
 	}
 
 	100% {
 		transform: scale(1);
 		box-shadow: none;
+	}
+}
+
+// Fix below needed to avoid blurry text on some scale transformations in Firefox that are caused by adding the perspective needed above for non-jerky transform in Chrome
+// Although the code does not appear in Firefox dev tools when inspecting, not including this code block will cause blurred text on the hovered & focused CTA button using Windows 10, FF 83
+@supports (-moz-appearance: none) {
+	@keyframes pulsate {
+		0% {
+			transform: scale(1);
+			box-shadow: none;
+		}
+	
+		50% {
+			transform: scale(1.05);
+			box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+		}
+	
+		100% {
+			transform: scale(1);
+			box-shadow: none;
+		}
 	}
 }
 
@@ -471,4 +492,68 @@
 		color: var(--color-grey-light-2);
 		z-index: 10;
 	}
+}
+
+////////////////////////////////////////////////////////////
+// CALL TO ACTION
+.cta {
+	padding: 3.5rem;
+	text-align: center;
+
+	&__book-now {
+		font-size: 2rem;
+		font-weight: 300;
+		text-transform: uppercase;
+		margin-bottom: 2.5rem;
+	}
+}
+
+////////////////////////////////////////////////////////////
+// BUTTON
+.btn {
+	font-size: 1.6rem;
+	font-weight: 300;
+	text-transform: uppercase;
+	border-radius: 10rem;
+	border: none;
+	background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+	color: #fff;
+	position: relative;
+	overflow: hidden;
+	backface-visibility: hidden;
+	cursor: pointer;
+
+	& > * {
+		display: inline-block;
+		height: 100%;
+		width: 100%;
+		transition: all .3s;
+	}
+
+	&__visible {
+		padding: 2rem 7.5rem;
+	}
+
+	&__invisible {
+		padding: 2rem 0;
+		position: absolute;
+		top: -100%;
+		left: 0;
+	}
+
+	&:hover {
+		background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+
+		& .btn__visible,
+		& .btn__invisible {
+			transform: translateY(100%);
+		}
+
+	}
+
+	&:focus {
+		outline: none;
+		animation: pulsate 1s infinite;
+	}
+
 }
